--- a/.github/workflows/multi-job.yaml
+++ b/.github/workflows/multi-job.yaml
@@ -3,17 +3,19 @@ name: multijob-workflow
 on: push
 jobs:
     build:
-        runs-on: ununtu-latest
+        runs-on: ubuntu-latest
         steps:
             -  name: Build stage
                run: echo"you application start building"
     Test:
-        runs-on: ununtu-latest
+        runs-on: ubuntu-latest
+        needs: build
         steps:
             -  name: Test stage
                run: echo"Test cases are running"
     Deploy:
-        runs-on: ununtu-latest
+        runs-on: ubuntu-latest
+        needs: Test
         steps:
             -  name: Deploy stage
                run: echo"Deploying your application"
